--- a/src/Consumers/PhoneApp.Consumer.Report/Properties/launchSettings.json
+++ b/src/Consumers/PhoneApp.Consumer.Report/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Staging"
       },
       "applicationUrl": "http://localhost:5015",
       "dotnetRunMessages": true
@@ -23,7 +23,7 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Staging"
       }
     }
   }
